GNOME Bugzilla – Bug 642916
HTML_PARSE_NOIMPLIED does nothing
Last modified: 2012-05-10 14:47:34 UTC
Created attachment 181524 [details] [review] Patch that fixes the skipping of the HTML_PARSE_NOIMPLIED flag Hello everyone. I just noticed that the HTML_PARSE_NOIMPLIED flag that you can pass to the HTML-Parser methods doesn't do anything. Its intended purpose is to stop the HTML-parser from forcibly adding a pair of html/body tags if the stream does not contain any. This is highly useful when you don't need this level of strictness. Unfortunately, specifying it doesn't work, because the option is not copied into the parsing context. I've added a very simple patch that fixes this oversight. This should bring the library into conformance with the API-Docs in this respect. I'd be honored if you could include it into the next release. Thanks in advance, Martin Schröder.
Comment on attachment 181524 [details] [review] Patch that fixes the skipping of the HTML_PARSE_NOIMPLIED flag [Setting "patch" flag and correcting mime type so this can actually be queried for.]
Hello everyone. I've reported this bug over a full year ago; and even after André fixed my omission last month of marking this bug as also having a patch associated with it, there does not seem to be any attention from the actualy developers with access to the code repository. I wonder what's the hold-up here, as this patch fixes the inconsistency between the API and the actual implementation, is so simple as that verifying its correctness is easy enough and *only* affects users if they actually specify the flag, knowing full well what it SHOULD do. Additionally, the libxml2 actually does what the flags says, if you just apply this patch. So, what can be done to expedite the admission of this patch to the code repository?
Patch looks fine applied and commited, it will be in the next release, thanks ! http://git.gnome.org/browse/libxml2/commit/?id=b91111b47599b9b07830db5ae2291739d22c384b I'm the developper of libxml2 and it's mostly in maintainance mode at this point, so I don't make release often and don't look for patches often either. No hold-up here. Another option for faster feedback is sending the patch to the mailing-list Daniel
(In reply to comment #3) Ahh, thanks, that explains it. As I said a year ago, I'm honoured that you have accepted the patch into the mainline. If I ever find another issue, I'll be sure to remember posting to the mailing list. Anyway, thanks for this great piece of software. I can't even estimate how many hours of work it has saved me so far. :) -- Martin
No problem, I think I would be frustrated too if my patches were languishing for years. I will make a release candidate this week-end I think if you can give it a try when it is out within a week, that would be a good way to help too :-) thanks ! Daniel